--- a/app/styles/trident.scss
+++ b/app/styles/trident.scss
@@ -67,13 +67,14 @@ section.trident {
     }
 
     .features {
+        $width: 3.75rem;
         .img-fluid {
             width: 100%;
         }
 
         .img-container {
             display: table-cell;
-            width: 4.5rem;
+            width: $width;
             float: left;
             text-align: center;
             margin-right: 2rem;
@@ -81,8 +82,8 @@ section.trident {
             svg {
                 display: block;
                 margin: auto;
-                width: 4.5rem;
-                height: 4.5rem;
+                width: $width;
+                height: $width;
                 
                 path {
                     fill: rgba(0,0,0, 0.5) !important;
@@ -92,9 +93,9 @@ section.trident {
 
         .feature {
             color: $Primary_Grey;
-            font-size: 1.8rem;
+            font-size: 1.5rem;
             font-weight: 600;
-            padding-left: 5rem;
+            padding-left: 15%;
             display: table;
             
             span {
@@ -103,16 +104,7 @@ section.trident {
             }
         }
 
-        .spike {
-            position: absolute;
-            bottom: -1px;
-            left: 0;
-            right: 0;
-
-            img {
-                width: 100%;
-            }
-        }
+        
     }
 
     .video {
